# project-lumos

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_TROUBLESHOOTING.md  CODE_OF_CONDUCT.md  CODE_QUALITY_STANDARDS.md  CONTRIBUTING.md  ISSUE_FORMAT_VERIFICATION.md  ISSUE_GUIDE.md  LICENSE  LIMITATIONS.txt  MANIFEST.in  OPEN_SOURCE_RELEASE_SUMMARY.md  README.md  SECURITY.md  SETUP_PRE_COMMIT.md  VERIFICATION_REPORT.md  all_datahub_datasets.json  check_issue_format.sh  dataaa.txt  framework_cli.py  groups.json  mypy.ini  owner.py  owner_assignments.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_pre_commit.sh  simple_versioning.py  temp_table_info.txt  test_runner.py  test_standards.sh  test_versioning.py  users.json  version_history.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  code-quality.yml  docs.yml  lint.yml  pre-commit-checks.yml  publish.yml
backends/: README.md  start-datahub.sh  stop-datahub.sh
configs/: global_settings.yaml
configs/team_configurations/: example_team.yaml
core/common/: base_interfaces.py  config_manager.py  urn_builders.py  utils.py
core/controllers/: data_job_lineage_controller.py  enrichment_controller.py  ingestion_controller.py  lineage_controller.py  ownership_controller.py  version_controller.py
core/platform/: data-catalouge.py  factory.py  interface.py
core_library/: __version__.py  ingestion_service.py
core_library/common/: config_manager.py  emitter.py  utils.py
core_library/enrichment_services/: properties_service.py
core_library/ingestion_handlers/: __init__.py  avro_handler.py  base_ingestion_handler.py  csv_handler.py  handler_factory.py  ingestion_service  ingestion_service.py  mongo_handler.py  s3_handler.py
core_library/lineage_services/: data_job_service.py
datahub_framework_toolkit/: framework_cli.py
datahub_framework_toolkit/configs/: global_settings.yaml
datahub_framework_toolkit/orchestration_examples/: airflow_dag_example.py
datahub_framework_toolkit/platform_services/: platform_interface.py
demo-scripts/: sales_demo.sh
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  DECISIONS.md  END_TO_END_FLOW.md  LUMOS_END_TO_END_DEMO.md  QUICK_REFERENCE.md  README.md  VISION.md
docs/vision/: 00_executive_summary.md  01_problem_statement.md  02_product_definition.md  03_solution_overview.md  04_architecture_vision.md  05_roadmap.md  06_implementation_status.md  07_competitive_analysis.md  08_business_value.md  09_detailed_plan.md  10_ai_roadmap.md  11_demo_script.md  12_migration_guide.md  13_cost_attribution.md  14_cost_management.md  15_assessment_report.md  README.md
examples/: README.md
examples/enrichment/: enrichment_example.py
examples/ingestion/: csv_ingestion_example.py  mongo_ingestion_example.py
examples/lineage/: dataset_lineage_example.py
feature/dq_services/: assertion_service.py
feature/enrichment/: base_enrichment_service.py  description_service.py  documentation_service.py  factory.py  properties_service.py  tag_service.py
feature/extraction/: EXTRACTION_CAPABILITIES.md  assertions_extractor_service.py  base_extraction_service.py  comprehensive_dataset_extractor.py  extraction_factory.py  governance_extractor_service.py  impact_extractor_service.py  lineage_extractor_service.py  metadata_diff_service.py  profiling_extractor_service.py  properties_extractor_service.py  quality_extractor_service.py  schema_extractor_service.py  usage_extractor_service.py
feature/ingestion/: __init__.py  ingestion_service.py  service.py
feature/lineage/: data_job_service.py  dataset_lineage_service.py
feature/ownership/: __init__.py  base_ownership_service.py  ownership_service.py
feature/rbac/: __init__.py
feature/versioning/: __init__.py  dataset_scanner.py  version_service.py
features/lineage/: dataset_lineage_service.py
features/profiling/: dataset_stats_service.py
features/rbac/: policy_service.py
orchestration_examples/: airflow_dag_example.py
platform_services/: __init__.py  data_catalog_adapter.py  data_catalog_factory.py  data_catalog_interface.py  datahub_handler.py  datahub_service.py  metadata_platform_interface.py  platform_factory.py  platform_interface.py
sample-data/: device_access_control.avro  device_homepass.avro  device_security_websites.avro  device_type.avro  device_type_master.avro  device_type_sp.avro  group_master_dimension.avro  lan_stats_dy.avro  location_capability.avro  location_coverage_alarm_status.avro  location_coverage_alarm_weekly.avro  location_master_dimension.avro  neighbour_report_daily.avro  node_master_dimension.avro  node_peer_metrics_fact.avro  node_utilization_metrics.avro  node_utilization_metrics_dy.avro  qoe_metrics.avro  qoe_metrics_dy.avro  steer_summary_dy.avro
sample-data-csv/: akamai_category_map.csv  akamai_plume_category_map.csv  categories.csv  category_id_override.csv  devicetag.csv  global-device-types.csv  metasaurus.csv  plume_metasaurus_mapping.csv  plume_metasaurus_metadata.csv  releasenotes.csv  threat_intelligence_category_map.csv
sample_configs_and_templates/: global_settings_template.yaml
sample_configs_and_templates/enrichment/: add_descriptions_template.yaml  avro_data_tables_enrichment.json  csv_enrichments.json  data_warehouse_multi_enrichment.json  enrichment_template.json  plume_avro_data_tables_enrichment.json  plume_data_warehouse_multi_enrichment.json  sales_enrichments.json  test_enrichment.json
sample_configs_and_templates/ingestion/: csv_ingestion_template.yaml  ingestion_template.json  ingestion_template.yaml  mongo_ingestion_template.yaml  partitioned_categories.json  sales_ingestion.json  test_ingestion.json
sample_configs_and_templates/lineage/: data_job_lineage_template.json  (+5 more)
scripts/: __init__.py  check_conventional_commit_msg.py  conventions.py
test/: README.md  conftest.py  pytest.ini  run_tests.sh
tests/: README.md  __init__.py  conftest.py
(+167 files in other folders)
